--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,42 @@
 # /etc/nginx/nginx.conf
+upstream django {
+    server unix:/usr/src/app/CorePCFE.sock; # for a file socket
+}
+
 server {
     listen 80;
-    server_name personalcarbonfootprintestimate.org;
+    server_name personalcarbonfootprintestimate.org www.personalcarbonfootprintestimate.org;
 
     location / {
-        include uwsgi_params;
-        uwsgi_pass unix:/app/uwsgi.sock;
+        include /etc/nginx/uwsgi_params;
+        uwsgi_pass django;
     }
 
     location /static/ {
-        alias /app/static/;
+        alias /app/static/; # your Django project's static files
     }
 
     location /media/ {
-        alias /app/media/;
+        alias /app/media/; # your Django project's static files
     }
-
-    error_log /var/log/nginx/pcfe_error.log;
-    access_log /var/log/nginx/pcfe_access.log;
 }
+#
+#     location / {
+#         include uwsgi_params;
+#         uwsgi_pass unix:/app/uwsgi.sock;
+#     }
+#
+#     location /static/ {
+#         alias /app/static/;
+#     }
+#
+#     location /media/ {
+#         alias /app/media/;
+#     }
+#
+#     error_log /var/log/nginx/pcfe_error.log;
+#     access_log /var/log/nginx/pcfe_access.log;
+# }
 
 # user  nginx;
 # worker_processes  auto;
