--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,18 @@
 
-
 services:
-  django_gunicorn:
+  web:
+    container_name: web-uWSGI
     build: .
+    command: ./entrypoint.sh
+    volumes:
+      - .:/app
+      - static_volume:/app/staticfiles
+    ports:
+      - "8000:8000"
     env_file:
       - .env
-    restart: always
-    container_name: djan-gunicorn
-    command: >
-      bash -c "python manage.py collectstatic --noinput &&
-               python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn --bind 0.0.0.0:8000 CorePCFE.wsgi:application"
-    volumes:
-      - .:/pcfeApp
     depends_on:
       - db
-    networks:
-      - pcfe-network
-
-  nginx:
-    build:
-      context: .
-      dockerfile: ./nginx/Dockerfile.nginx
-
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt
-    depends_on:
-      - django_gunicorn
-    networks:
-      - pcfe-network
 
   db:
     container_name: pcfe-db
@@ -50,12 +28,17 @@ services:
       - POSTGRES_DB=${POSTSQL_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
-    networks:
-      - pcfe-network
+
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/staticfiles
+    depends_on:
+      - web
 
 volumes:
   pgdata:
-
-networks:
-  pcfe-network:
-    driver: bridge
+  static_volume:
