--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,33 +1,51 @@
-# /etc/nginx/nginx.conf
+server {
+    listen 80;
+    server_name personalcarbonfootprintestimate.org www.personalcarbonfootprintestimate.org;
 
-user  nginx;
-worker_processes  auto;
+    location / {
+        proxy_pass http://web-uwsgi:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+    location /static/ {
+        alias /usr/src/app/static/;
+    }
 
-events {
-    worker_connections  1024;
+    location /media/ {
+        alias /usr/src/app/media/;
+    }
+
+    # Redirect HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+server {
+    listen 443 ssl;
+    server_name personalcarbonfootprintestimate.org www.personalcarbonfootprintestimate.org;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    ssl_certificate /etc/letsencrypt/live/pcfe.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pcfe.org/privkey.pem;
 
-    access_log  /var/log/nginx/access.log  main;
+    location / {
+        proxy_pass http://web-uwsgi:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-    sendfile        on;
-    #tcp_nopush     on;
+    location /static/ {
+        alias /usr/src/app/static/;
+    }
 
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
+    location /media/ {
+        alias /usr/src/app/media/;
+    }
 }
 
 
