--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 
 services:
-  web:
-    container_name: web-uWSGI
+  web-uwsgi:
+    container_name: web-uwsgi
     build: .
-    command: ./entrypoint.sh
+    command: uwsgi --ini uwsgi.ini
     volumes:
-      - .:/app
-      - static_volume:/app/staticfiles
+      - .:/usr/src/app
+      - static_volume:/usr/src/app/static
+      - media_volume:/usr/src/app/media
     ports:
       - "8000:8000"
     env_file:
@@ -33,12 +34,16 @@ services:
     image: nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/app/staticfiles
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - static_volume:/usr/src/app/static
+      - media_volume:/usr/src/app/media
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
-      - web
+      - web-uwsgi
 
 volumes:
   pgdata:
   static_volume:
+  media_volume:
